--- a/primeraapp/platforms/android/assets/www/mystyle.css
+++ b/primeraapp/platforms/android/assets/www/mystyle.css
@@ -1,11 +1,26 @@
-.container {
-  
+
+#pagetwo, #pageone {
+  margin: auto;
+  background-color: #ADE0BA;
+  text-align: center;
 }
+
+#marco {
+	background-color: #7D7757;
+	color: #F9F9F9;
+}
+
+.container {
+	text-align: center;
+	margin-left: 570px;
+}
+
 .fila_tabla {
   display: table-row;
 }
 .item {
   display: table-cell;
+  padding: 4px 4px 0px 4px;
 }
 .item button {
    display: table-row;
