--- a/gestsoci/www/mystyle.css
+++ b/gestsoci/www/mystyle.css
@@ -1,4 +1,4 @@
-#paginaevento, #paginacocina, #consumoproductos, #paginafactura {
+#evento, #paginaevento, #paginacocina, #consumoproductos, #paginafactura {
     text-align: left;
 }
 
@@ -6,11 +6,13 @@ div {
     text-shadow: 0px 1px 0px #6C6A6A;
 }
 
+
 #consumosociedad, #consumoproductos, #factura {
   position: center;
   font-weight: bold;
   background-color: #A41BAE;
 }
+
 #login{
   position: center;
   background-image: url(imagen.jpg);
@@ -18,26 +20,22 @@ div {
   background-attachment: fixed;
 }
 
-#marco0, #marco1, #marco2, #marco3 {
-  
-  text-align: center;
-  margin-top: 0%;
-  background-color:#2C1F81;
-  color: #F9F9F9;
+#marcoevento, #marcocomida, #marcovinos, #marcorefrescos, #marcocafes, #marcolicores, #marcofactura {
+    font-size: 17px;
 }
 
 #titulodatos, #titulococina, #tituloporpersona, #titulovinos, #titulocavas, #titulolicores, #titulorefrescos, #titulocafes{
   text-align: center;
 }
 
-#tablacomensales, #datos, #porpersona, #vinos, #licores, #cafes, #datosfactura {
+#tablacomensales, #datos, #porpersona, #vinos, #licores, #cafes, #datosfactura, #refrescos {
   position: center;
-  background-color: #B970BE;
+  background-color: #B6B6F5;
 }
 
-#porpersona, #datos, #cocina, #cavas, #refrescos{
+#porpersona, #datos, #cocina, #cavas, {
   position: center;
-  background-color: #B970BE;
+  background-color: #B6B6F5;
   margin: 20px 20px 0 20px;
   padding-right: 0px;
   border-radius: 10px;
